# microCBOR

./: .gitignore  CMakeLists.txt  LICENSE  Makefile  dataitem.h  decoder.c  encoder.h  main.c
inc/: utils.h
include/: dataitem.h  decoder.h  encoder.h  exp2_uint.h  utils.h
src/: CMakeLists.txt  dataitem.c  decoder.c  encoder.c  exp2_uint.c  main.c  utils.c
tests/: CMakeLists.txt  dataItemChangeValueAtKey.cpp  dataItemCount.cpp  dataItemEqual.cpp  dataItemFree.cpp  dataItemInsertKeyValue.cpp  dataItemInsertValueAtIndex.cpp  dataItemKeyExists.cpp  dataItemKeyLessThanOrEqual.cpp  dataItemLessThanOrEqual.cpp  dataItemMajorType.cpp  dataItemMapChangeValueAtKey.cpp  dataItemMapInsertKeyValue.cpp  dataItemMapInsertValueAtIndex.cpp  dataItemMapKeyExists.cpp  dataItemMapRemoveKeyValueAtKey.cpp  dataItemMapRemoveValueAtIndex.cpp  dataItemRemoveKeyValueAtKey.cpp  dataItemRemoveValueAtIndex.cpp  decodeNegativeInteger.cpp  decodeTag.cpp  decodeUnsignedInteger.cpp  unsignedInteger.c  unsignedInteger.cpp  unsignedInteger.h  utils.c  utils.h
zephyr/: CMakeLists.txt
